package com.grupo2.t4j.domain;

import java.security.SecureRandom;

public class AlgoritmoGeradorPasswords implements IAlgoritmoGeradorPasswords {


    /**
     * Algoritmo gerador de passwords
     * @return stringBuilder.toString();
     */
    @Override
    public String geraPassword() {

        //ASCII range - alphanumeric (0-9, a-z, A-Z)
        final String chars = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";

        SecureRandom random = new SecureRandom();
        StringBuilder stringBuilder = new StringBuilder();

        // each iteration of loop choose a character randomly from the given ASCII range
        // and append it to StringBuilder instance

        for (int i = 0; i < 10; i++) {
            int randomIndex = random.nextInt(chars.length());
            stringBuilder.append(chars.charAt(randomIndex));
        }

        return stringBuilder.toString();
    }
}
